--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API to Chatbot of HiringCoders project from team CodeSquad",
   "main": "src/handler.js",
   "scripts": {
-    "debug": "node --inspect ./node_modules/serverless/bin/serverless.js offline start --stage dev",
+    "debug": "node --inspect ./node_modules/serverless/bin/serverless.js offline --stage dev",
     "ddb-install": "serverless dynamodb install",
     "ddb-seed": "serverless dynamodb migrate && serverless dynamodb seed",
     "package": "serverless package",
@@ -12,6 +12,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "aws-sdk": "^2.752.0",
     "lodash": "^4.17.20",
     "node-fetch": "^2.6.1",
     "shortid": "^2.2.15",
