--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@google-cloud/dialogflow": "^3.3.0",
     "aws-sdk": "^2.752.0",
+    "dialogflow": "^1.2.0",
     "lodash": "^4.17.20",
     "node-fetch": "^2.6.1",
     "shortid": "^2.2.15",
-    "source-map-support": "^0.5.10"
+    "source-map-support": "^0.5.10",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
